@@ -1,7 +1,6 @@
 package uk.gov.hmcts.darts.cases.controller;
 
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.skyscreamer.jsonassert.JSONCompareMode;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -28,7 +27,8 @@ import uk.gov.hmcts.darts.testutils.IntegrationBase;
 
 import java.time.LocalDate;
 import java.time.OffsetDateTime;
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 
 import static org.skyscreamer.jsonassert.JSONAssert.assertEquals;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
@@ -46,7 +46,6 @@ import static uk.gov.hmcts.darts.testutils.stubs.UserAccountStub.INTEGRATION_TES
 
 @AutoConfigureMockMvc
 @SuppressWarnings({"PMD.VariableDeclarationUsageDistance", "PMD.NcssCount", "PMD.ExcessiveImports"})
-@Disabled("Impacted by V1_363__not_null_constraints_part3.sql")
 class CaseControllerSearchPostTest extends IntegrationBase {
 
     @Autowired
@@ -67,7 +66,7 @@ class CaseControllerSearchPostTest extends IntegrationBase {
 
         CourtCaseEntity case2 =  PersistableFactory.getCourtCaseTestData().createCaseAt(swanseaCourthouse);
         case2.setCaseNumber("Case2");
-        case2.setDefendantList(Arrays.asList(createDefendantForCaseWithName(case2, "Defendant2")));
+        case2.setDefendantList(new ArrayList<>(List.of(createDefendantForCaseWithName(case2, "Defendant2"))));
 
         CourtCaseEntity case3 =  PersistableFactory.getCourtCaseTestData().createCaseAt(swanseaCourthouse);
         case3.setCaseNumber("Case3");
@@ -240,7 +239,8 @@ class CaseControllerSearchPostTest extends IntegrationBase {
                       "AJUDGE"
                     ]
                   }
-                ]
+                ],
+                "is_data_anonymised": false
               }
             ]
             """;
@@ -298,7 +298,8 @@ class CaseControllerSearchPostTest extends IntegrationBase {
                       "AJUDGE"
                     ]
                   }
-                ]
+                ],
+                "is_data_anonymised": false
               }
             ]
             """;
